Nettoyage du back apres supp de la relat manytomany entre ens et instr